# esp32

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
components/lvgl__lvgl/: lv_conf_template.h
components/lvgl__lvgl/src/: lv_conf_internal.h
components/lvgl__lvgl/src/misc/: lv_timer.c
main/: CMakeLists.txt  lvgl_demo_ui.c  spi_lcd_touch_example_main.c
main/bsp/: CMakeLists.txt  bsp_gpio.c  bsp_i2c.c  bsp_i2c.h
main/lvgl_task/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_font_Big_Number.c  ui_font_Bold_Font.c  ui_helpers.c  ui_helpers.h  ui_img_icn_battery_png.c  ui_img_icn_bluetooth_png.c  ui_img_icn_history_png.c  ui_img_img_btn_bg_png.c  ui_img_img_btn_off_png.c  ui_img_img_btn_on_png.c  ui_img_img_demo_widgets_avatar_png.c  ui_img_img_heart_big_png.c  ui_img_img_heart_small_png.c  ui_img_img_line_png.c  ui_img_img_slider_png.c  ui_img_img_switch_bg_png.c
