idf_component_register(SRCS "spi_lcd_touch_example_main.c" "lvgl_demo_ui.c"
                        SRCS "bsp/bsp_gpio.c"
                        SRCS "bsp/bsp_i2c.c"
                        SRCS "lvgl_task/ui_font_Big_Number.c"
                        SRCS "lvgl_task/ui_font_Bold_Font.c"
                        SRCS "lvgl_task/ui_helpers.c"
                        SRCS "lvgl_task/ui_img_icn_battery_png.c"
                        SRCS "lvgl_task/ui_img_icn_bluetooth_png.c"
                        SRCS "lvgl_task/ui_img_icn_history_png.c"
                        SRCS "lvgl_task/ui_img_img_btn_bg_png.c"
                        SRCS "lvgl_task/ui_img_img_btn_off_png.c"
                        SRCS "lvgl_task/ui_img_img_btn_on_png.c"
                        SRCS "lvgl_task/ui_img_img_heart_big_png.c"
                        SRCS "lvgl_task/ui_img_img_heart_small_png.c"
                        SRCS "lvgl_task/ui_img_img_line_png.c"
                        SRCS "lvgl_task/ui_img_img_slider_png.c"
                        SRCS "lvgl_task/ui_img_img_switch_bg_png.c"
                        SRCS "lvgl_task/ui_img_img_demo_widgets_avatar_png.c"
                        SRCS "lvgl_task/ui.c"
                        SRCS "../managed_components/espressif__esp_lcd_st7796s/esp_lcd_st7796s.c"
                        SRCS "../managed_components/espressif__esp_lcd_touch/esp_lcd_touch.c"
                        INCLUDE_DIRS "../managed_components/espressif__esp_lcd_st7796s/include"
                        INCLUDE_DIRS "../managed_components/espressif__esp_lcd_touch/include"
                        INCLUDE_DIRS "./bsp"
                        INCLUDE_DIRS "./lvgl_task"
                        INCLUDE_DIRS ".")
